--- a/Web Scraper.ipynb
+++ b/Web Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postcode</th>\n",
+       "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
        "      <th>Neighbourhood</th>\n",
        "    </tr>\n",
@@ -105,23 +105,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Postcode           Borough     Neighbourhood\n",
-       "1      M1A      Not assigned      Not assigned\n",
-       "2      M2A      Not assigned      Not assigned\n",
-       "3      M3A        North York         Parkwoods\n",
-       "4      M4A        North York  Victoria Village\n",
-       "5      M5A  Downtown Toronto      Harbourfront"
+       "  PostalCode           Borough     Neighbourhood\n",
+       "1        M1A      Not assigned      Not assigned\n",
+       "2        M2A      Not assigned      Not assigned\n",
+       "3        M3A        North York         Parkwoods\n",
+       "4        M4A        North York  Victoria Village\n",
+       "5        M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "table = soup.body.table\n",
-    "headers = [x.string.strip() for x in table.findAll('th')]\n",
-    "df = pd.DataFrame(columns = headers)\n",
+    "df = pd.DataFrame(columns = ['PostalCode', 'Borough', 'Neighbourhood'])\n",
     "\n",
     "rows = table.findAll('tr')\n",
     "for i, row in enumerate(rows):\n",
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +171,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postcode</th>\n",
+       "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
        "      <th>Neighbourhood</th>\n",
        "    </tr>\n",
@@ -218,7 +217,7 @@
        "      <th>6</th>\n",
        "      <td>M7A</td>\n",
        "      <td>Queen's Park</td>\n",
-       "      <td>Queen's Park</td>\n",
+       "      <td>Not assigned</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -243,20 +242,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Postcode           Borough     Neighbourhood\n",
-       "0      M3A        North York         Parkwoods\n",
-       "1      M4A        North York  Victoria Village\n",
-       "2      M5A  Downtown Toronto      Harbourfront\n",
-       "3      M5A  Downtown Toronto       Regent Park\n",
-       "4      M6A        North York  Lawrence Heights\n",
-       "5      M6A        North York    Lawrence Manor\n",
-       "6      M7A      Queen's Park      Queen's Park\n",
-       "7      M9A         Etobicoke  Islington Avenue\n",
-       "8      M1B       Scarborough             Rouge\n",
-       "9      M1B       Scarborough           Malvern"
+       "  PostalCode           Borough     Neighbourhood\n",
+       "0        M3A        North York         Parkwoods\n",
+       "1        M4A        North York  Victoria Village\n",
+       "2        M5A  Downtown Toronto      Harbourfront\n",
+       "3        M5A  Downtown Toronto       Regent Park\n",
+       "4        M6A        North York  Lawrence Heights\n",
+       "5        M6A        North York    Lawrence Manor\n",
+       "6        M7A      Queen's Park      Not assigned\n",
+       "7        M9A         Etobicoke  Islington Avenue\n",
+       "8        M1B       Scarborough             Rouge\n",
+       "9        M1B       Scarborough           Malvern"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +303,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postcode</th>\n",
+       "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
        "      <th>Neighbourhood</th>\n",
        "    </tr>\n",
@@ -375,20 +374,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Postcode           Borough     Neighbourhood\n",
-       "0      M3A        North York         Parkwoods\n",
-       "1      M4A        North York  Victoria Village\n",
-       "2      M5A  Downtown Toronto      Harbourfront\n",
-       "3      M5A  Downtown Toronto       Regent Park\n",
-       "4      M6A        North York  Lawrence Heights\n",
-       "5      M6A        North York    Lawrence Manor\n",
-       "6      M7A      Queen's Park      Queen's Park\n",
-       "7      M9A         Etobicoke  Islington Avenue\n",
-       "8      M1B       Scarborough             Rouge\n",
-       "9      M1B       Scarborough           Malvern"
+       "  PostalCode           Borough     Neighbourhood\n",
+       "0        M3A        North York         Parkwoods\n",
+       "1        M4A        North York  Victoria Village\n",
+       "2        M5A  Downtown Toronto      Harbourfront\n",
+       "3        M5A  Downtown Toronto       Regent Park\n",
+       "4        M6A        North York  Lawrence Heights\n",
+       "5        M6A        North York    Lawrence Manor\n",
+       "6        M7A      Queen's Park      Queen's Park\n",
+       "7        M9A         Etobicoke  Islington Avenue\n",
+       "8        M1B       Scarborough             Rouge\n",
+       "9        M1B       Scarborough           Malvern"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +423,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Postcode</th>\n",
+       "      <th>PostalCode</th>\n",
        "      <th>Borough</th>\n",
        "      <th>Neighbourhood</th>\n",
        "    </tr>\n",
@@ -495,33 +494,33 @@
        "</div>"
       ],
       "text/plain": [
-       "  Postcode      Borough                                    Neighbourhood\n",
-       "0      M1B  Scarborough                                   Rouge, Malvern\n",
-       "1      M1C  Scarborough           Highland Creek, Rouge Hill, Port Union\n",
-       "2      M1E  Scarborough                Guildwood, Morningside, West Hill\n",
-       "3      M1G  Scarborough                                           Woburn\n",
-       "4      M1H  Scarborough                                        Cedarbrae\n",
-       "5      M1J  Scarborough                              Scarborough Village\n",
-       "6      M1K  Scarborough      East Birchmount Park, Ionview, Kennedy Park\n",
-       "7      M1L  Scarborough                  Clairlea, Golden Mile, Oakridge\n",
-       "8      M1M  Scarborough  Cliffcrest, Cliffside, Scarborough Village West\n",
-       "9      M1N  Scarborough                      Birch Cliff, Cliffside West"
+       "  PostalCode      Borough                                    Neighbourhood\n",
+       "0        M1B  Scarborough                                   Rouge, Malvern\n",
+       "1        M1C  Scarborough           Highland Creek, Rouge Hill, Port Union\n",
+       "2        M1E  Scarborough                Guildwood, Morningside, West Hill\n",
+       "3        M1G  Scarborough                                           Woburn\n",
+       "4        M1H  Scarborough                                        Cedarbrae\n",
+       "5        M1J  Scarborough                              Scarborough Village\n",
+       "6        M1K  Scarborough      East Birchmount Park, Ionview, Kennedy Park\n",
+       "7        M1L  Scarborough                  Clairlea, Golden Mile, Oakridge\n",
+       "8        M1M  Scarborough  Cliffcrest, Cliffside, Scarborough Village West\n",
+       "9        M1N  Scarborough                      Birch Cliff, Cliffside West"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "codes = pd.DataFrame(df.groupby(['Postcode', 'Borough'])['Neighbourhood'].apply(lambda x: \"%s\" % ', '.join(x)))\n",
+    "codes = pd.DataFrame(df.groupby(['PostalCode', 'Borough'])['Neighbourhood'].apply(lambda x: \"%s\" % ', '.join(x)))\n",
     "codes.reset_index(inplace=True) # Grouping the DataFrame made the columns Postcode and Borough the indices\n",
     "codes.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +529,7 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
